# jira-sprint-automation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
